--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   </head>
   <body>
     <div id="center">
-      <img src="play.png" id="play" style="width: 100%; height: 100%;">
-      <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;">
+      <button id="play" class="playpause">
+        <img src="play.png" style="width: 100%; height: 100%;">
+      </button>
+      <button id="pause" class="none playpause">
+        <img src="pause.png" style="width: 100%; height: 100%;">
+      </button>
     </div>
 
     <div id="seeSongs">
