--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   </head>
   <body>
     <div id="center">
-      <button id="play" class="playpause">
-        <img src="play.png" style="width: 100%; height: 100%;">
-      </button>
-      <button id="pause" class="none playpause">
-        <img src="pause.png" style="width: 100%; height: 100%;">
+      <button id="playPause" class="playpause">
+        <img src="play.png" id="play" style="width: 100%; height: 100%;">
+        <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;">
       </button>
     </div>
 
@@ -24,6 +22,11 @@
       <dl id="songsList">
       </dl>
     </div>
+
+    <div id="centerSong">
+      <h2 id="seeSong"></h2>
+    </div>
+
     <div id="popups">
       <div id="uploadpopup" class="popup">
         <form id="uploadForm">
