Add Firebase hosting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Musicorum</title>
     <link rel="icon" href="icon.png" type="image/png">
-    <!-- <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png"> -->
+    <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js" type="text/javascript" async></script>
   </head>
