Add slider to show time in the track, and save song sources

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
     <div id="centerSong">
       <h2 id="seeSong"></h2>
+      <div id="showTime">
+        <div id="trackTime">
+          <div id="doneGone">
+              <div id="timeIndicate"></div>
+          </div>
+          <p id="seeTime"></p>
+        </div>
+      </div>
+      
     </div>
 
     <div id="popups">
@@ -38,12 +47,12 @@
             <label id="upload" class="getfile" for="file">Choose file</label>
             <p id="showFile">No file chosen</p>
           </div>
-          <label>By URL: <input id="byUrl" type="text"></label>
+          <label title="Not working">By URL: <input id="byUrl" type="text" disabled></label>
           <p id="uploadbtn" class="getfile">Upload</p>
         </form>
       </div>
     </div>
     <button id="uploadPopbtn">Upload</button>
-
+    <button id="clearall">Clear</button>
   </body>
 </html>
