Play next song when current song ends

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Musicorum</title>
+    <title>Musicorae</title>
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
@@ -35,7 +35,7 @@
       </div>
       
     </div>
-
+    <div id="shadow" class="none"></div>
     <div id="popups">
       <div id="uploadpopup" class="popup">
         <form id="uploadForm">
