--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <label id="upload" class="getfile" for="file">Choose file</label>
             <p id="showFile">No file chosen</p>
           </div>
-          <label title="Not working">By URL: <input id="byUrl" type="text" disabled></label>
+          <label title="Not working">By URL: <input id="byUrl" type="text" ></label>
           <p id="uploadbtn" class="getfile">Upload</p>
         </form>
       </div>
