--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A simple online music player.">
     <title>Musicorae</title>
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
@@ -12,14 +13,18 @@
   </head>
   <body>
     <div id="center">
-      <button id="playPause" class="playpause">
-        <img src="play.png" id="play" style="width: 100%; height: 100%;">
-        <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;">
+      <button id="playPause" class="playpause" title="Play/pause songs">
+        <img src="play.png" id="play" style="width: 100%; height: 100%;" alt="Play button">
+        <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;" alt="Pause button">
       </button>
     </div>
 
     <div id="seeSongs">
       <dl id="songsList">
+        <template>
+          <dt>Song name</dt>
+          <dd>Artist</dd>
+        </template>
       </dl>
     </div>
 
