Dark mode and use attributes more

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <audio id="currentAudio"></audio>
-
+    <div id="everything">
     <div id="center">
       <button id="playPause" class="playpause" title="Play/pause songs">
         <img src="play.png" id="play" style="width: 100%; height: 100%;" alt="Play button">
@@ -55,7 +55,11 @@
         </form>
       </div>
     </div>
-    <button id="uploadPopbtn">Upload</button>
-    <button id="clearall">Clear</button>
+    <div id="buttons">
+      <button id="uploadPopbtn">Upload</button>
+      <button id="modebtn">Mode</button>
+      <button id="clearall">Clear</button>
+    </div>
+    </div>
   </body>
 </html>
