change name and try arrayBuffer again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" async>
-    <script src="main.js" type="text/javascript" async></script>
+    <script src="music-player.js" type="text/javascript" async></script>
   </head>
   <body>
     <audio id="currentAudio"></audio>
