--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Musicorum</title>
+    <meta name="description" content="A simple online music player.">
+    <title>Musicorae</title>
     <link rel="icon" href="icon.png" type="image/png">
-    <!-- <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png"> -->
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js" type="text/javascript" async></script>
+    <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" async>
+    <script src="music-player.js" type="text/javascript" async></script>
   </head>
   <body>
+    <audio id="currentAudio"></audio>
+    <div id="everything">
     <div id="center">
-      <button id="playPause" class="playpause">
-        <img src="play.png" id="play" style="width: 100%; height: 100%;">
-        <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;">
+      <button id="playPause" class="playpause" title="Play/pause songs">
+        <img src="play.png" id="play" style="width: 100%; height: 100%;" alt="Play button">
+        <img src="pause.png" id="pause" class="none" style="width: 100%; height: 100%;" alt="Pause button">
       </button>
     </div>
 
@@ -25,8 +28,17 @@
 
     <div id="centerSong">
       <h2 id="seeSong"></h2>
+      <div id="showTime">
+        <div id="trackTime">
+          <div id="doneGone">
+              <div id="timeIndicate"></div>
+          </div>
+          <p id="seeTime"></p>
+        </div>
+      </div>
+      
     </div>
-
+    <div id="shadow" class="none"></div>
     <div id="popups">
       <div id="uploadpopup" class="popup">
         <form id="uploadForm">
@@ -38,12 +50,16 @@
             <label id="upload" class="getfile" for="file">Choose file</label>
             <p id="showFile">No file chosen</p>
           </div>
-          <label>By URL: <input id="byUrl" type="text"></label>
+          <label title="Not working">By URL: <input id="byUrl" type="text" ></label>
           <p id="uploadbtn" class="getfile">Upload</p>
         </form>
       </div>
     </div>
-    <button id="uploadPopbtn">Upload</button>
-
+    <div id="buttons">
+      <button id="uploadPopbtn">Upload</button>
+      <button id="modebtn">Mode</button>
+      <button id="clearall">Clear</button>
+    </div>
+    </div>
   </body>
 </html>
