Fix keyboard shortcuts with modal open

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A simple online music player.">
     <title>Musicorae</title>
-    <link rel="icon" href="icon.png" type="image/png">
+    <!-- <link rel="icon" href="icon.png" type="image/png"> -->
     <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" async>
     <script src="music-player.js" type="text/javascript" async></script>
