--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A simple online music player.">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <title>Musicorae</title>
     <link rel="icon" href="icon.png" type="image/png">
     <link rel="apple-touch-icon" sizes="620x620" href="apple-touch-icon.png">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" async>
-    <script src="music-player.js" type="text/javascript" async></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" async>
+    <script src="index.js" type="text/javascript" async></script>
   </head>
   <body>
     <audio id="currentAudio"></audio>
@@ -70,6 +71,7 @@
     <div id="buttons">
       <button id="uploadPopbtn">Upload</button>
       <button id="modebtn">Mode</button>
+      <button id="songsbtn">Songs</button>
       <button id="clearall">Clear</button>
     </div>
     </div>
