Add local volume adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,16 @@
       <div id="showTime">
         <div id="trackTime">
           <div id="doneGone">
-              <div id="timeIndicate"></div>
+            <div id="timeIndicate"></div>
           </div>
           <p id="seeTime"></p>
         </div>
       </div>
-      
+      <div id="adjustAudio">
+        <div id="showAudioLevel">
+          <div id="audioSlider"></div>
+        </div>
+      </div>
     </div>
     <div id="shadow" class="none"></div>
     <div id="popups">
